--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,214 @@ Green: #00B172
 White: #FFF
 
 */
+body{
+    margin:0;
+    padding:0;
+    font-family: 'Roboto', sans-serif;
+}
+header{
+    
+}
+.spotifyLogo{
+    width: auto;
+    height: 50px;
+    padding-left: 40px;
+    padding-top: 10px;
+}
+
+.nav{
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 10px;
+    align-items: center;
+    height: 100px;
+    
+    
+    
+}
+.listNav{
+    display: flex;
+    justify-content: space-between;
+    width: 500px;
+    padding-right: 40px;
+}
+
+li{
+    font-size: 30px;
+    display: inline;
+    font-weight: bold;
+}
+   
+
+
+.landingImage{
+    
+    background-size: 100%;
+    height: 900px;
+    width:100%;
+    position: relative;
+    
+    
+}
+h1{
+    position: absolute;
+    top:30%;
+    color: white;
+    font-size:90px ;
+}
+.pa{
+    position: absolute;
+    color: white;
+    font-size: 35px;
+    width: 800px;
+    text-align: center;
+
+}
+.imgTop{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+
+
+/*section*/
+.songs{
+    width: 300px;
+}
+.hd {
+    width: 300px;
+}
+
+.stream {
+    width: 300px;
+}
+
+.musicIcon{
+    height: 150px;
+    width: 200px;
+    padding-left: 50px;
+}
+
+.highIcon{
+    height: 150px;
+    width: 200px;
+    
+    padding-left:44px;
+}
+
+.deviceIcon{
+    height: 150px;
+    width: 200px;
+    padding-left: 50px;
+}
+
+.greenWriting{
+    text-align: center;
+    color: #00B172;
+    font-size: 35px;
+    font-weight: bold;
+
+}
+.threeItems{
+    
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-bottom: 200px;
+    height: 100px;
+    
+}
+
+
+h2{
+    text-align: center;
+    margin-top: 50px;
+    width: auto;
+    font-size: 50px;
+    text-decoration:underline #00B172;
+    padding-bottom: 5px;
+}
+.greenLineTitle{
+    
+    
+}
+
+.text{
+    text-align: center;
+    font-size: 30px
+}
+
+
+
+
+/*Main*/
+.forPadding{
+    margin-left: 30px;
+    margin-right: 30px;
+}
+.main{
+    background-color: #00B172;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 150px;
+    padding-right: 150px;
+    height: 1000px;
+    
+    align-items: center;
+}
+
+.mainText{
+    width:40%;
+    height: 1000px;
+    
+   
+    
+}
+
+.spotifyAppImg{
+    width: auto;
+    height: 700px;
+    padding-top: 40px;
+}
+
+.textMain{
+    color: #FFF;
+    font-size: 25px;
+}
+
+.titleMain{
+    color: #FFF;
+    
+    border-bottom: 4px solid #FFF;
+    padding-top: 20px;
+    font-weight: bold;
+    
+    
+}
+
+
+h3{
+    color: #FFF;
+    font-size: 30px;
+    font-weight: bold;
+    
+}
+
+.spotifyIcon{
+    height: auto;
+    width: 200px;
+}
+
+.compress{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+}
+
+
+
